[package]
name = "widow"
version = "0.1.0"
authors = ["Robert Rusch <rusch@mit.edu>"]
description = "A WIP RPC library for games"
repository = "https://github.com/rusch95/widow-rs"
readme = "README.md"
keywords = ["games", "RPC", "networking"]
license = "BSD-3-Clause"

[dependencies]
bincode = "1.0"
env_logger = "0.5"
log = "0.4"
mio = "0.6"
serde = "1.0"
serde_derive = "1.0"
